--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,22 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: var(--title-color);
+  position: relative;
 }
+.header-link.current::after {
+  content: '';
+  position: absolute;
+  width: calc(100% - 40px);
+  height: 4px;
+  background-color: #404bbf;
+  left: 20px;
+  bottom: -4px;
+  border-radius: 2px;
+
+
+}
+
+
 .header-link:hover,
 .header-link:focus {
   color: var(--main-body-color);
