--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ body {
   color: var(--title-color);
   position: relative;
 }
+
 .header-link.current::after {
   content: '';
   position: absolute;
@@ -135,10 +136,7 @@ body {
   left: 20px;
   bottom: -4px;
   border-radius: 2px;
-
-
 }
-
 
 .header-link:hover,
 .header-link:focus {
@@ -588,6 +586,29 @@ body {
   border-left: 1px solid #e7e9fc;
 }
 
+.services-item:hover .services-list-text {
+  transform: translateY(0);
+}
+
+.services-list-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.services-list-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+line-height: 1.5px;
+letter-spacing: var(--main-letter-spacing);
+color: #F4F4FD;
+background-color: #4d5ae5;
+padding: 40px;
+height: 100%;
+transform: translateY(100%);
+transition: transform 300ms linear ;
+}
+
 .services-item {
   width: calc((100% - 48px) / 3);
   background-color: var(--first-background-color);
@@ -598,6 +619,7 @@ body {
   /* border: 0.5px solid #f4f4fd; */
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 .services-title {
   margin-top: 31px;
