--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   );
+  --main-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -125,6 +126,7 @@ body {
   letter-spacing: var(--main-letter-spacing);
   color: var(--title-color);
   position: relative;
+  transition: var(--main-transition);
 }
 
 .header-link.current::after {
@@ -160,6 +162,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: var(--main-body-color);
+  transition: var(--main-transition);
 }
 .header-mail:hover,
 .header-mail:focus {
@@ -173,6 +176,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: var(--main-body-color);
+  transition: var(--main-transition);
 }
 .header-tel:hover,
 .header-tel:focus {
@@ -226,6 +230,7 @@ body {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:active {
@@ -390,6 +395,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-icon {
@@ -433,6 +439,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover {
@@ -446,6 +453,7 @@ body {
 
 .customer-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 /* ------------- FOOTER------------------------  */
@@ -518,6 +526,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-icon {
@@ -561,6 +570,7 @@ body {
   flex: none;
   order: 2;
   flex-grow: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters-btn:hover,
 .filters-btn:focus {
@@ -603,32 +613,13 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: #f4f4fd;
-  /* background-color: #4d5ae5; */
-  /* background-image: linear-gradient(
-      0deg,
-      rgba(77, 90, 229, 0.1),
-      rgba(77, 90, 229, 0.1)
-    ),
-    url(4); */
-  background-image: linear-gradient(
-      rgba(77, 90, 229, 0.1),
-      rgba(77, 90, 229, 0.1)
-    ),
-    url(../images/fon.svg);
-  background-blend-mode: soft-light, normal;
-  mix-blend-mode: normal;
-
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-
-
+  background-color: #4d5ae5;
   padding-top: 40px;
   padding-left: 32px;
   padding-right: 32px;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 300ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
 }
 
@@ -636,6 +627,7 @@ body {
   width: calc((100% - 48px) / 3);
   background-color: var(--first-background-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .services-item:hover {
