--- a/css/styles.css
+++ b/css/styles.css
@@ -652,3 +652,27 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
 }
+
+/* -------------------backdrop------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;  
+  width: 408px;
+  min-height: 576px;
+  background-color: #FCFCFC;
+  border-radius: 4px;
+  transform: translate(-50%,-50%);
+}
+.modal-close {
+  width: 100px;
+}
