--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)
   );
-  --main-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -126,7 +126,7 @@ body {
   letter-spacing: var(--main-letter-spacing);
   color: var(--title-color);
   position: relative;
-  transition: var(--main-transition);
+  transition: color var(--main-transition);
 }
 
 .header-link.current::after {
@@ -162,7 +162,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: var(--main-body-color);
-  transition: var(--main-transition);
+  transition: color var(--main-transition);
 }
 .header-mail:hover,
 .header-mail:focus {
@@ -176,7 +176,7 @@ body {
   line-height: 1.5;
   letter-spacing: var(--main-letter-spacing);
   color: var(--main-body-color);
-  transition: var(--main-transition);
+  transition: color var(--main-transition);
 }
 .header-tel:hover,
 .header-tel:focus {
@@ -230,7 +230,8 @@ body {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--main-transition) ,
+  box-shadow var(--main-transition);
 }
 
 .hero-btn:active {
@@ -329,7 +330,6 @@ body {
 
 .team {
   background-color: var(--first-background-color);
-
   background-color: #f4f4fd;
 }
 
@@ -395,7 +395,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--main-transition);
 }
 
 .team-soc-icon {
@@ -439,7 +439,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--main-transition);
 }
 
 .customers-link:hover {
@@ -453,7 +453,7 @@ body {
 
 .customer-icon {
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: fill var(--main-transition);
 }
 
 /* ------------- FOOTER------------------------  */
@@ -526,7 +526,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--main-transition);
 }
 
 .footer-soc-icon {
@@ -570,7 +570,9 @@ body {
   flex: none;
   order: 2;
   flex-grow: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--main-transition), background-color var(--main-transition),
+  border var(--main-transition), box-shadow var(--main-transition);
+  
 }
 .filters-btn:hover,
 .filters-btn:focus {
@@ -627,7 +629,7 @@ body {
   width: calc((100% - 48px) / 3);
   background-color: var(--first-background-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--main-transition);
 }
 
 .services-item:hover {
@@ -661,6 +663,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--main-transition),
+  visibility var(--main-transition);
 }
 
 .modal {
@@ -671,8 +675,31 @@ body {
   min-height: 576px;
   background-color: #FCFCFC;
   border-radius: 4px;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(1);
+  transition: transform var(--main-transition);
 }
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%,-50%) scale(0);
+}
+
 .modal-close {
-  width: 100px;
+    position: absolute;
+   top: 24px;
+   right: 24px;
+  fill: #000000;
+  width: 24px;
+  min-height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #E7E9FC;
+  border-radius: 50%;
+   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
