--- a/css/styles.css
+++ b/css/styles.css
@@ -230,8 +230,8 @@ body {
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-  transition: background-color var(--main-transition) ,
-  box-shadow var(--main-transition);
+  transition: background-color var(--main-transition),
+    box-shadow var(--main-transition);
 }
 
 .hero-btn:active {
@@ -570,9 +570,9 @@ body {
   flex: none;
   order: 2;
   flex-grow: 0;
-  transition: color var(--main-transition), background-color var(--main-transition),
-  border var(--main-transition), box-shadow var(--main-transition);
-  
+  transition: color var(--main-transition),
+    background-color var(--main-transition), border var(--main-transition),
+    box-shadow var(--main-transition);
 }
 .filters-btn:hover,
 .filters-btn:focus {
@@ -663,37 +663,36 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity var(--main-transition),
-  visibility var(--main-transition);
+  transition: opacity var(--main-transition), visibility var(--main-transition);
 }
 
 .modal {
   position: absolute;
   top: 50%;
-  left: 50%;  
+  left: 50%;
   width: 408px;
   min-height: 576px;
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
   border-radius: 4px;
-  transform: translate(-50%,-50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform var(--main-transition);
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%,-50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal-close {
-    position: absolute;
-   top: 24px;
-   right: 24px;
+  position: absolute;
+  top: 24px;
+  right: 24px;
   fill: #000000;
   width: 24px;
   min-height: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: #E7E9FC;
+  background-color: #e7e9fc;
   border-radius: 50%;
-   display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
